--- a/client/admin-dashboard.html
+++ b/client/admin-dashboard.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Admin Dashboard</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             margin: 0;
@@ -82,6 +83,7 @@
         <button onclick="showCreate()">Create Schedule</button>
         <button onclick="showSchedules()">View Schedules</button>
         <button onclick="showComplaints()">View Complaints</button>
+        <button onclick="showImpactDashboard()">Issue Impact Dashboard</button>
         <button onclick="logout()">Logout</button>
     </div>
 
@@ -323,6 +325,62 @@ async function updateComplaint(id) {
     const data = await res.json();
     alert(data.message);
     showComplaints();
+}
+async function showImpactDashboard() {
+    const token = localStorage.getItem("token");
+
+    const res = await fetch("http://localhost:5000/api/complaints", {
+        headers: { "Authorization": "Bearer " + token }
+    });
+
+    const data = await res.json();
+    const complaints = data.complaints;
+
+    let titles = complaints.map(c => c.title);
+    let votes = complaints.map(c => c.votes);
+
+    let critical = complaints.filter(c => c.votes >= 10).length;
+    let high = complaints.filter(c => c.votes >= 5 && c.votes < 10).length;
+    let normal = complaints.filter(c => c.votes < 5).length;
+
+   document.getElementById("content").innerHTML = `
+    <h2>📊 Issue Impact Dashboard</h2>
+
+    <div style="width: 500px; margin: auto;">
+        <canvas id="voteChart"></canvas>
+    </div>
+
+    <br><br>
+
+    <div style="width: 400px; margin: auto;">
+        <canvas id="priorityChart"></canvas>
+    </div>
+`;
+
+    // Bar Chart - Votes
+    new Chart(document.getElementById("voteChart"), {
+        type: "bar",
+        data: {
+            labels: titles,
+            datasets: [{
+                label: "Votes per Complaint",
+                data: votes,
+                backgroundColor: "#1e3a8a"
+            }]
+        }
+    });
+
+    // Pie Chart - Priority
+    new Chart(document.getElementById("priorityChart"), {
+        type: "pie",
+        data: {
+            labels: ["Critical", "High", "Normal"],
+            datasets: [{
+                data: [critical, high, normal],
+                backgroundColor: ["#dc2626", "#f59e0b", "#16a34a"]
+            }]
+        }
+    });
 }
 function logout() {
     localStorage.removeItem("token");
