--- a/client/user-dashboard.html
+++ b/client/user-dashboard.html
@@ -248,27 +248,38 @@ async function viewMyComplaints() {
     let content = "<h2>My Complaints</h2>";
 
     data.complaints.forEach(c => {
-        const statusClass = c.status.replace(" ", "");
+    const statusClass = c.status.replace(" ", "");
 
-        content += `
-            <div class="card">
-                <h3>${c.title}</h3>
-                <p><strong>Area:</strong> ${c.area}</p>
-                <p><strong>Submitted:</strong> ${new Date(c.createdAt).toLocaleString()}</p>
-                <p>${c.description}</p>
+    content += `
+        <div class="card">
+            <h3>${c.title}</h3>
+            <p><strong>Area:</strong> ${c.area}</p>
+            <p><strong>Submitted:</strong> ${new Date(c.createdAt).toLocaleString()}</p>
+            <p>${c.description}</p>
 
-                <p><strong>Status:</strong> 
-                    <span class="status ${statusClass}">${c.status}</span>
-                </p>
+            <p><strong>Status:</strong> 
+                <span class="status ${statusClass}">${c.status}</span>
+            </p>
 
-                <p><strong>Admin Response:</strong> ${c.response || "No response yet"}</p>
+            <p><strong>Admin Response:</strong> ${c.response || "No response yet"}</p>
 
-                <div class="vote" onclick="voteComplaint('${c._id}')">
-                    🔼 ${c.votes} Votes
-                </div>
+            <div class="vote" onclick="voteComplaint('${c._id}')">
+                🔼 ${c.votes} Votes
             </div>
-        `;
-    });
+
+            ${
+                c.status === "Resolved"
+                ? `
+                <button onclick="deleteComplaint('${c._id}')"
+                    style="margin-top:10px;background:#dc2626;color:white;border:none;padding:6px 10px;border-radius:4px;cursor:pointer;">
+                    Delete Complaint
+                </button>
+                `
+                : ""
+            }
+        </div>
+    `;
+});
 
     document.getElementById("content").innerHTML = content;
 }
@@ -292,6 +303,24 @@ function logout() {
     localStorage.removeItem("token");
     localStorage.removeItem("role");
     window.location.href = "login.html";
+}
+// ================= Delete Complaint =================
+async function deleteComplaint(id) {
+    const token = localStorage.getItem("token");
+
+    if (!confirm("Are you sure you want to delete this complaint?")) return;
+
+    const res = await fetch(`http://localhost:5000/api/complaints/${id}`, {
+        method: "DELETE",
+        headers: { 
+            "Authorization": "Bearer " + token 
+        }
+    });
+
+    const data = await res.json();
+    alert(data.message);
+
+    viewMyComplaints(); // refresh list
 }
 
 </script>
