update logout redirection to index.html in admin and user dashboards

--- a/client/admin-dashboard.html
+++ b/client/admin-dashboard.html
@@ -384,7 +384,7 @@ async function showImpactDashboard() {
 }
 function logout() {
     localStorage.removeItem("token");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
 }
 
 </script>
