--- a/client/user-dashboard.html
+++ b/client/user-dashboard.html
@@ -341,7 +341,7 @@ async function loadNotifications() {
 function logout() {
     localStorage.removeItem("token");
     localStorage.removeItem("role");
-    window.location.href = "login.html";
+    window.location.href = "index.html";
 }
 // ================= Delete Complaint =================
 async function deleteComplaint(id) {
