--- a/client/admin-dashboard.html
+++ b/client/admin-dashboard.html
@@ -122,7 +122,7 @@ function showCreate() {
 async function createSchedule() {
     const token = localStorage.getItem("token");
 
-    const response = await fetch("http://localhost:5000/api/schedules", {
+    const response = await fetch("https://campus-care-backend.vercel.app/api/schedules", {
         method: "POST",
         headers: {
             "Content-Type": "application/json",
@@ -145,7 +145,7 @@ async function createSchedule() {
 async function showSchedules() {
     const token = localStorage.getItem("token");
 
-    const response = await fetch("http://localhost:5000/api/schedules", {
+    const response = await fetch("https://campus-care-backend.vercel.app/api/schedules", {
         headers: {
             "Authorization": "Bearer " + token
         }
@@ -190,7 +190,7 @@ async function deleteSchedule(id) {
 
     if (!confirm("Are you sure you want to delete this schedule?")) return;
 
-    const response = await fetch(`http://localhost:5000/api/schedules/${id}`, {
+    const response = await fetch(`https://campus-care-backend.vercel.app/api/schedules/${id}`, {
         method: "DELETE",
         headers: {
             "Authorization": "Bearer " + token
@@ -227,7 +227,7 @@ function editSchedule(schedule) {
 async function updateSchedule(id) {
     const token = localStorage.getItem("token");
 
-    const response = await fetch(`http://localhost:5000/api/schedules/${id}`, {
+    const response = await fetch(`https://campus-care-backend.vercel.app/api/schedules/${id}`, {
         method: "PUT",
         headers: {
             "Content-Type": "application/json",
@@ -251,7 +251,7 @@ async function updateSchedule(id) {
 async function showComplaints() {
     const token = localStorage.getItem("token");
 
-    const res = await fetch("http://localhost:5000/api/complaints", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints", {
         headers: { "Authorization": "Bearer " + token }
     });
 
@@ -310,7 +310,7 @@ async function updateComplaint(id) {
     const status = document.getElementById(`status-${id}`).value;
     const responseText = document.getElementById(`response-${id}`).value;
 
-    const res = await fetch(`http://localhost:5000/api/complaints/${id}`, {
+    const res = await fetch(`https://campus-care-backend.vercel.app/api/complaints/${id}`, {
         method: "PUT",
         headers: {
             "Content-Type": "application/json",
@@ -329,7 +329,7 @@ async function updateComplaint(id) {
 async function showImpactDashboard() {
     const token = localStorage.getItem("token");
 
-    const res = await fetch("http://localhost:5000/api/complaints", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints", {
         headers: { "Authorization": "Bearer " + token }
     });
 
