--- a/client/index.html
+++ b/client/index.html
@@ -228,7 +228,7 @@ document.getElementById("loginForm").addEventListener("submit", async function(e
     const errorMsg = document.getElementById("errorMsg");
 
     try {
-        const response = await fetch("http://localhost:5000/api/auth/login", {
+        const response = await fetch("https://campus-care-backend.vercel.app/api/auth/login", {
             method: "POST",
             headers: {"Content-Type": "application/json"},
             body: JSON.stringify({ email, password })
@@ -271,7 +271,7 @@ document.getElementById("signupForm").addEventListener("submit", async function(
     const errorMsg = document.getElementById("errorMsg");
 
     try {
-        const response = await fetch("http://localhost:5000/api/auth/signup", {
+        const response = await fetch("https://campus-care-backend.vercel.app/api/auth/signup", {
             method: "POST",
             headers: {"Content-Type": "application/json"},
             body: JSON.stringify({ name, email, password})
