--- a/client/user-dashboard.html
+++ b/client/user-dashboard.html
@@ -154,7 +154,7 @@ function showDashboard() {
 async function viewSchedules() {
     const token = localStorage.getItem("token");
 
-    const res = await fetch("http://localhost:5000/api/schedules", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/schedules", {
         headers: { "Authorization": "Bearer " + token }
     });
 
@@ -181,7 +181,7 @@ async function viewSchedules() {
 async function viewAllComplaints() {
     const token = localStorage.getItem("token");
 
-    const res = await fetch("http://localhost:5000/api/complaints", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints", {
         headers: { "Authorization": "Bearer " + token }
     });
 
@@ -236,7 +236,7 @@ async function submitComplaint() {
     const description = document.getElementById("description").value;
     const area = document.getElementById("area").value;
 
-    const res = await fetch("http://localhost:5000/api/complaints", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints", {
         method: "POST",
         headers: {
             "Content-Type": "application/json",
@@ -253,14 +253,14 @@ async function submitComplaint() {
 async function viewMyComplaints() {
     const token = localStorage.getItem("token");
         // mark notifications as read
-    await fetch("http://localhost:5000/api/complaints/notifications/mark-read", {
+    await fetch("https://campus-care-backend.vercel.app/api/complaints/notifications/mark-read", {
         method: "PUT",
         headers: { "Authorization": "Bearer " + token }
     });
 
     loadNotifications();
 
-    const res = await fetch("http://localhost:5000/api/complaints/my", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints/my", {
         headers: { "Authorization": "Bearer " + token }
     });
 
@@ -309,7 +309,7 @@ async function viewMyComplaints() {
 async function voteComplaint(id) {
     const token = localStorage.getItem("token");
 
-    const res = await fetch(`http://localhost:5000/api/complaints/${id}/vote`, {
+    const res = await fetch(`https://campus-care-backend.vercel.app/api/complaints/${id}/vote`, {
         method: "POST",
         headers: { "Authorization": "Bearer " + token }
     });
@@ -322,7 +322,7 @@ async function voteComplaint(id) {
 async function loadNotifications() {
     const token = localStorage.getItem("token");
 
-    const res = await fetch("http://localhost:5000/api/complaints/notifications/count", {
+    const res = await fetch("https://campus-care-backend.vercel.app/api/complaints/notifications/count", {
         headers: { "Authorization": "Bearer " + token }
     });
 
@@ -349,7 +349,7 @@ async function deleteComplaint(id) {
 
     if (!confirm("Are you sure you want to delete this complaint?")) return;
 
-    const res = await fetch(`http://localhost:5000/api/complaints/${id}`, {
+    const res = await fetch(`https://campus-care-backend.vercel.app/api/complaints/${id}`, {
         method: "DELETE",
         headers: { 
             "Authorization": "Bearer " + token 
